batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/Batch_Job_Schedule__c.object-meta.xml
<CustomObject>
    <description>Batch Apex Job Schedule</description>
    <label>Batch Job Schedule</label>
    <nameField>
        <label>Batch Job Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Job Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>