batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <label>Cron Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>