batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/fields/Cron_Trigger_Id__c.field-meta.xml
<CustomField>
    <fullName>Cron_Trigger_Id__c</fullName>
    <description>Scheduled Job Cron Trigger Id</description>
    <inlineHelpText>Scheduled Job Cron Trigger Id</inlineHelpText>
    <label>Cron Trigger Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>