batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/fields/Every_Number_of_Months__c.field-meta.xml
<CustomField>
    <fullName>Every_Number_of_Months__c</fullName>
    <label>Every Number of Month(s)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>