batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/fields/Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Type__c</fullName>
    <label>Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>12 Hourly</fullName>
                <isActive>false</isActive>
                <label>12 Hourly</label>
            </value>
            <value>
                <fullName>15Minutes</fullName>
                <isActive>false</isActive>
                <label>15 Minutes</label>
            </value>
            <value>
                <fullName>2 Hourly</fullName>
                <isActive>false</isActive>
                <label>2 Hourly</label>
            </value>
            <value>
                <fullName>2 Monthly</fullName>
                <isActive>false</isActive>
                <label>2 Monthly</label>
            </value>
            <value>
                <fullName>2 Weekly</fullName>
                <isActive>false</isActive>
                <label>2 Weekly</label>
            </value>
            <value>
                <fullName>3 Hourly</fullName>
                <isActive>false</isActive>
                <label>3 Hourly</label>
            </value>
            <value>
                <fullName>3 Weekly</fullName>
                <isActive>false</isActive>
                <label>3 Weekly</label>
            </value>
            <value>
                <fullName>30Minutes</fullName>
                <isActive>false</isActive>
                <label>30 Minutes</label>
            </value>
            <value>
                <fullName>4 Hourly</fullName>
                <isActive>false</isActive>
                <label>4 Hourly</label>
            </value>
            <value>
                <fullName>4 Weekly</fullName>
                <isActive>false</isActive>
                <label>4 Weekly</label>
            </value>
            <value>
                <fullName>6 Hourly</fullName>
                <isActive>false</isActive>
                <label>6 Hourly</label>
            </value>
            <value>
                <fullName>6 Monthly</fullName>
                <isActive>false</isActive>
                <label>6 Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>