batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/fields/Preferred_Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Hour__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <label>Preferred Start Hour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0AM</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1AM</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2AM</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3AM</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4AM</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5AM</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6AM</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7AM</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8AM</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9AM</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10AM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11AM</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12PM</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>13PM</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14PM</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15PM</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>16PM</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>17PM</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>18PM</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>19PM</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20PM</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>21PM</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>22PM</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>23PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>