batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/fields/Preferred_Start_Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Week_Day__c</fullName>
    <label>Preferred Start Week Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MON</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>TUE</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>WED</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>THU</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>FRI</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>SAT</fullName>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>SUN</fullName>
                <label>Sunday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>