batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/recordTypes/Custom_Cron_Expression_Job.recordType-meta.xml
<RecordType>
    <fullName>Custom_Cron_Expression_Job</fullName>
    <active>true</active>
    <description>Jobs with custom cron expression</description>
    <label>Custom Cron Expression Job</label>
</RecordType>