batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/recordTypes/Daily_Job.recordType-meta.xml
<RecordType>
    <fullName>Daily_Job</fullName>
    <active>true</active>
    <description>Daily batch jobs</description>
    <label>Daily Job</label>
</RecordType>