batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/recordTypes/Existing_Scheduled_Job.recordType-meta.xml
<RecordType>
    <fullName>Existing_Scheduled_Job</fullName>
    <active>true</active>
    <description>Link an existing Scheduled Apex job</description>
    <label>Existing Scheduled Job</label>
</RecordType>