batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/recordTypes/Hourly_Job.recordType-meta.xml
<RecordType>
    <fullName>Hourly_Job</fullName>
    <active>true</active>
    <description>Hourly batch jobs</description>
    <label>Hourly Job</label>
</RecordType>