batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/recordTypes/Monthly_Job.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Job</fullName>
    <active>true</active>
    <description>Monthly batch jobs</description>
    <label>Monthly Job</label>
</RecordType>