batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/recordTypes/Weekly_Job.recordType-meta.xml
<RecordType>
    <fullName>Weekly_Job</fullName>
    <active>true</active>
    <description>Weekly batch jobs</description>
    <label>Weekly Job</label>
</RecordType>