batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/recordTypes/Yearly_Job.recordType-meta.xml
<RecordType>
    <fullName>Yearly_Job</fullName>
    <active>true</active>
    <description>Yearly batch jobs</description>
    <label>Yearly Job</label>
</RecordType>