batch-orchestrator/main/batch-job-management/objects/Batch_Job_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Frequency_Type__c</columns>
    <columns>Preferred_Start_Hour__c</columns>
    <columns>Cron_Expression__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>